# rs-stellar-xdr

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs  wasm-pack.sh  xdr-version
.github/: dependabot.yml
.github/scripts/: sync-xdr-features.py
.github/workflows/: bump-version.yml  publish.yml  regenerate-xdr.yml  rust.yml  socket-scan.yml
benches/: sparse_decode.rs
benches/fixtures/: FC62697B--60659332.xdr
bindings/js/: Cargo.toml
bindings/js/pkg/: package.json  stellar-xdr.d.ts  stellar-xdr.js  stellar-xdr_bg.js
bindings/js/src/: lib.rs
crates/stellar-xdr-wasm/: Cargo.toml
crates/stellar-xdr-wasm/src/: lib.rs
examples/: vecm_demo.rs
src/: account_conversions.rs  curr.rs  curr_xdr_version.rs  generated.rs  hex.rs  lib.rs  next.rs  next_xdr_version.rs  num.rs  num128.rs  num256.rs  schema.rs  schemars.rs  scmap.rs  scval.rs  scval_conversions.rs  scval_validations.rs  sign.rs  str.rs  transaction_conversions.rs  transaction_meta.rs  version_curr.rs  version_next.rs  xdr.rs
src/cli/: compare.rs  decode.rs  encode.rs  generate.rs  guess.rs  mod.rs  random.rs  skip_whitespace.rs  types.rs  util.rs  version.rs
src/curr/: account_conversions.rs  asset_conversions.rs  auths.rs  bytes_conversions.rs  contract_conversions.rs  default.rs  generated-rust.rs  generated.rs  hash.rs  json_schema.rs  jsonschema.rs  ledgerkey.rs  mod.rs  num_conversions.rs  scval_conversions.rs  scval_validations.rs  str.rs  transaction_conversions.rs  tx_hash.rs
src/next/: account_conversions.rs  asset_conversions.rs  bytes_conversions.rs  contract_conversions.rs  default.rs  generated-rust.rs  generated.rs  hash.rs  jsonschema.rs  ledgerkey.rs  mod.rs  num_conversions.rs  scval_conversions.rs  scval_validations.rs  str.rs  transaction_conversions.rs  tx_auths.rs  tx_hash.rs
tests/: account_conversions.rs  arbitrary.rs  const_to_xdr.rs  const_write_xdr.rs  default.rs  error.rs  hash.rs  ledgerkey_to_key.rs  num_conversions.rs  serde.rs  serde_ignored.rs  serde_ints.rs  serde_tx.rs  serde_tx_schema.rs  sparse_decode.rs  spec_udt_def_compat.rs  str.rs  stringm.rs  transaction_meta.rs  tx.rs  tx_auths.rs  tx_base64_skip_whitespace.rs  tx_debug_display.rs  tx_hash.rs  tx_hash_variants.rs  tx_overrun.rs  tx_prot18.rs  tx_read_edge_cases.rs  tx_scvec.rs  tx_serde.rs  tx_small.rs  vecm.rs  vecm_into_iterator.rs  version.rs
tests/snapshots/: serde_tx_schema__serde_tx_schema.snap
xdr/: curr-version  next-version
xdr-definitions-json/: curr.json  xdr.json
xdr-generator/: Gemfile  README.md  generate.rb  type_deduplicator.rb
xdr-generator-rust/: Cargo.toml  HANDOFF.md
xdr-generator-rust/examples/: test_snake.rs
xdr-generator-rust/generator/: Cargo.toml  header.rs
xdr-generator-rust/generator-definitions-json/: Cargo.toml
xdr-generator-rust/generator-definitions-json/src/: ir.rs  lib.rs  main.rs
xdr-generator-rust/generator-definitions-json/src/tests/: cfg_filter.rs  mod.rs
xdr-generator-rust/generator/src/: const_encode.rs  generator.rs  ir.rs  lib.rs  main.rs  naming.rs  options.rs  output.rs  types.rs
xdr-generator-rust/generator/src/tests/: cfg_filter.rs  generator.rs  mod.rs  naming.rs  rust_backend.rs  types.rs  wire_size.rs
xdr-generator-rust/generator/templates/: const.rs.jinja  const_encode_array.rs.jinja  const_encode_optional.rs.jinja  const_encode_var_array.rs.jinja  const_xdr_array.rs.jinja  definition.rs.jinja  enum.rs.jinja  generated.rs.jinja  mod.rs.jinja  struct.rs.jinja  type_enum.rs.jinja  type_enum_definition.rs.jinja  typedef_alias.rs.jinja  typedef_newtype.rs.jinja  union.rs.jinja
xdr-generator-rust/src/: ast.rs  generator.rs  lexer.rs  lib.rs  main.rs  parser.rs  types.rs  xdr.pest
xdr-generator-rust/templates/: const.rs.jinja  enum.rs.jinja  generated.rs.jinja  struct.rs.jinja  type_enum.rs.jinja  typedef_alias.rs.jinja  typedef_newtype.rs.jinja  union.rs.jinja
xdr-generator-rust/xdr-parser/: Cargo.toml
xdr-generator-rust/xdr-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  types.rs
xdr-generator-rust/xdr-parser/src/tests/: lexer.rs  mod.rs  parser.rs  types.rs
xdr-generator/generator/: generator.rb  header.rs
xdr-json/: AccountEntry.json  AccountEntryExt.json  AccountEntryExtensionV1.json  AccountEntryExtensionV1Ext.json  AccountEntryExtensionV2.json  AccountEntryExtensionV2Ext.json  AccountEntryExtensionV3.json  AccountFlags.json  AccountMergeResult.json  AccountMergeResultCode.json  AllowTrustOp.json  AllowTrustResult.json  AllowTrustResultCode.json  AlphaNum12.json  AlphaNum4.json  Asset.json  AssetCode.json  AssetCode12.json  AssetType.json  Auth.json  AuthCert.json  AuthenticatedMessage.json  AuthenticatedMessageV0.json  BeginSponsoringFutureReservesOp.json  BeginSponsoringFutureReservesResult.json  BeginSponsoringFutureReservesResultCode.json  BinaryFuseFilterType.json  BucketEntry.json  BucketEntryType.json  BucketListType.json  BucketMetadata.json  BucketMetadataExt.json  BumpSequenceOp.json  BumpSequenceResult.json  BumpSequenceResultCode.json  ChangeTrustAsset.json  ChangeTrustOp.json  ChangeTrustResult.json  ChangeTrustResultCode.json  ClaimAtom.json  (+414 more)
xdr-json/curr/: AccountEntryExt.json  AccountEntryExtensionV1.json  AccountEntryExtensionV1Ext.json  AccountEntryExtensionV2.json  AccountEntryExtensionV2Ext.json  AccountEntryExtensionV3.json  AccountMergeResult.json  AccountMergeResultCode.json  AllowTrustResultCode.json  AlphaNum12.json  AlphaNum4.json  ArchivalProof.json  ArchivalProofBody.json  ArchivalProofNode.json  Asset.json  AssetCode4.json  Auth.json  AuthCert.json  AuthenticatedMessage.json  AuthenticatedMessageV0.json  BeginSponsoringFutureReservesOp.json  BeginSponsoringFutureReservesResult.json  BeginSponsoringFutureReservesResultCode.json  BinaryFuseFilterType.json  BucketEntry.json  BucketListType.json  BucketMetadata.json  BucketMetadataExt.json  BumpSequenceOp.json  BumpSequenceResultCode.json  ChangeTrustAsset.json  ChangeTrustOp.json  ClaimAtom.json  ClaimAtomType.json  ClaimClaimableBalanceOp.json  ClaimClaimableBalanceResult.json  (+368 more)
(+421 files in other folders)
