[package]
name = "stellar-xdr"
description = "Stellar XDR types, encoding, and decoding."
homepage = "https://github.com/stellar/rs-stellar-xdr"
repository = "https://github.com/stellar/rs-stellar-xdr"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version = "22.1.0"
edition = "2021"
rust-version = "1.74.0"

[[bin]]
name = "stellar-xdr"
path = "src/bin/stellar-xdr/main.rs"
required-features = ["cli"]
doctest = false

[build-dependencies]
crate-git-revision = "0.0.6"

[dependencies]
stellar-strkey = { version = "0.0.9", optional = true }
base64 = { version = "0.13.0", optional = true }
serde = { version = "1.0.139", features = ["derive"], optional = true }
serde_with = { version = "3.0.0", optional = true }
escape-bytes = { version = "0.1.1", default-features = false }
hex = { version = "0.4.3", optional = true }
arbitrary = {version = "1.1.3", features = ["derive"], optional = true}
clap = { version = "4.2.4", default-features = false, features = ["std", "derive", "usage", "help"], optional = true }
serde_json = { version = "1.0.89", optional = true }
thiserror = { version = "1.0.37", optional = true }
schemars = { version = "0.8.16", optional = true }

[dev-dependencies]
serde_json = "1.0.89"

[features]
default = ["std", "curr"]
std = ["alloc"]
alloc = ["dep:hex", "dep:stellar-strkey", "escape-bytes/alloc"]
curr = []
next = []

# Features dependent on optional dependencies.
base64 = ["std", "dep:base64"]
serde = ["alloc", "dep:serde", "dep:serde_with", "hex/serde"]
serde_json = ["std", "serde", "dep:serde_json"]
schemars = ["alloc", "serde", "serde_json", "dep:schemars"]
arbitrary = ["std", "dep:arbitrary"]
hex = []

# Features for the CLI.
cli = ["std", "curr", "next", "base64", "serde", "serde_json", "schemars", "dep:clap", "dep:thiserror"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs"]
