[package]
name = "stellar-xdr"
description = "Stellar XDR types, encoding, and decoding."
homepage = "https://github.com/stellar/rs-stellar-xdr"
repository = "https://github.com/stellar/rs-stellar-xdr"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
version = "25.0.0-rc.1"
edition = "2021"
rust-version = "1.84.0"

[[bin]]
name = "stellar-xdr"
path = "src/bin/stellar-xdr/main.rs"
required-features = ["cli"]
doctest = false

[build-dependencies]
crate-git-revision = "0.0.6"

[dependencies]
cfg_eval = { version = "0.1.2" }
stellar-strkey = { version = "0.0.13", optional = true }
base64 = { version = "0.22.1", optional = true }
serde = { version = "1.0.139", features = ["derive"], optional = true }
serde_with = { version = "3.12.0", features = ["schemars_0_8"], optional = true }
escape-bytes = { version = "0.1.1", default-features = false }
hex = { version = "0.4.3", optional = true }
arbitrary = {version = "1.1.3", features = ["derive"], optional = true}
clap = { version = "4.2.4", default-features = false, features = ["std", "derive", "usage", "help"], optional = true }
serde_json = { version = "1.0.89", optional = true }
thiserror = { version = "1.0.37", optional = true }
schemars = { version = "0.8.16", optional = true }
ethnum = { version = "1.5.0", optional = true }
rand = { version = "0.9.0", optional = true }
sha2 = { version = "0.10.9", optional = true }

[dev-dependencies]
serde_json = "1.0.89"
bytes-lit = "0.0.5"

[features]
default = ["std", "curr"]
std = ["alloc", "dep:sha2"]
alloc = ["dep:hex", "dep:stellar-strkey", "escape-bytes/alloc", "dep:ethnum"]
curr = []
next = []

# Features dependent on optional dependencies.
base64 = ["std", "dep:base64"]
serde = ["alloc", "dep:serde", "dep:serde_with", "hex/serde"]
serde_json = ["std", "serde", "dep:serde_json"]
schemars = ["alloc", "serde", "serde_json", "dep:schemars"]
arbitrary = ["std", "dep:arbitrary"]
hex = []
rand = ["dep:rand"]

# Features for the CLI.
cli = ["std", "curr", "next", "base64", "serde", "serde_json", "schemars", "arbitrary", "rand", "dep:clap", "dep:thiserror", "dep:ethnum"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs"]
