[package]
name = "bindings-js"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
stellar-xdr = { path = "../..", package = "stellar-xdr", features = ["std", "curr", "base64", "serde", "serde_json", "schemars"]}
schemars = "0.8.16"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-json-wasm = "1.0.1"
serde_json = "1.0.114"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

