[package]
name = "stellar-xdr-wasm"
version = "0.1.0"
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
stellar-xdr = { path = "../..", package = "stellar-xdr", features = ["wasm"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-json-wasm = "1.0.1"
serde_json = "1.0.114"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

